@@ -5,62 +5,46 @@ import com.tecnocampus.LS2.protube_back.persistence.TagRepository;
 import com.tecnocampus.LS2.protube_back.persistence.dto.TagDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class TagService {
 
-    public final TagRepository tagRepository;
+    private final TagRepository tagRepository;
 
+    @Autowired
     public TagService(TagRepository tagRepository) {
         this.tagRepository = tagRepository;
     }
 
     public List<TagDto> getTags() {
-        return tagRepository.findAll().stream().map(this::toDTO).toList();
+        return tagRepository.findAll().stream()
+                .map(tag -> new TagDto(tag.getId(), tag.getName()))
+                .collect(Collectors.toList());
     }
 
     public TagDto getTagById(Long id) {
-        return tagRepository.findById(id).map(this::toDTO).orElse(null);
+        return tagRepository.findById(id)
+                .map(tag -> new TagDto(tag.getId(), tag.getName()))
+                .orElse(null);
     }
 
-    public URI createTag(TagDto tagDto) {
-        Tag tag = toEntity(tagDto);
-        tagRepository.save(tag);
-        return ServletUriComponentsBuilder.fromCurrentRequest()
-                .path("/{id}")
-                .buildAndExpand(tag.getId())
-                .toUri();
+    public TagDto createTag(TagDto tagDto) {
+        Tag tag = new Tag(tagDto);
+        Tag saved = tagRepository.save(tag);
+        return new TagDto(saved.getId(), saved.getName());
     }
 
-    public TagDto deleteTag(Long id) {
-        TagDto tagDto = getTagById(id);
+    public void deleteTag(Long id) {
         tagRepository.deleteById(id);
-        return tagDto;
     }
 
     public TagDto updateTag(Long id, TagDto tagDto) {
-        Tag tag = toEntity(tagDto);
+        Tag tag = new Tag(tagDto);
         tag.setId(id);
-        tagRepository.save(tag);
-        return toDTO(tag);
-    }
-
-    private TagDto toDTO(Tag tag) {
-        return new TagDto(
-                tag.getId(),
-                tag.getName()
-        );
-    }
-
-    private Tag toEntity(TagDto tagDto) {
-        Tag tag = new Tag();
-        tag.setId(tagDto.id());
-        tag.setName(tagDto.name());
-        return tag;
+        Tag saved = tagRepository.save(tag);
+        return new TagDto(saved.getId(), saved.getName());
     }
 }
-
